# data_structures_and_algorithms

./: .gitignore  CMakeLists.txt  main.c
data_structures/linked_list/: linked_list.c  linked_list.h
data_structures/stack/: array_stack.c  array_stack.h  list_stack.c  list_stack.h
tests/: array_stack_test.c  array_stack_test.h  linked_list_test.c  linked_list_test.h  list_stack_test.c  list_stack_test.h
utils/: error.c  error.h
